Allow parens around an amount to be a valid when locale uses it

A locale can request numbers to be presented with parens around the
value. This change allows them to be entered in this format in the
amount fields.

BUG: 439819
FIXED-IN: 5.1.3